full-moon/tests/roblox_cases/pass/types_packs/source.lua
function foo<T...>(param: () -> T...)
end

type Foo<T...> = () -> T...

function bar<T...>(...: T...)
end