full-moon/tests/roblox_cases/fail/parser/nil_dot/source.lua
type Foo = nil.bar<string>
